--- a/_posts/2019-10-23-the-dog.markdown
+++ b/_posts/2019-10-23-the-dog.markdown
@@ -4,6 +4,8 @@ title:  "The Dog"
 date:   2019-10-23 -0700
 categories:
 ---
+![](/mysteries/images/TheDog.jpg)
+
 I don’t believe in the paranormal, but I do love the stories.  Nevertheless, I have had a few “odd” experiences in my life.
 
 This is one of them.
