Added descriptive text.

--- a/_posts/2019-10-23-the-dog.markdown
+++ b/_posts/2019-10-23-the-dog.markdown
@@ -6,6 +6,10 @@ categories:
 ---
 ![](/mysteries/images/TheDog.jpg)
 
+This article is about a fortuitous "premonition" I had many years ago in which I accidentally killed a dog.
+
+----
+
 I don’t believe in the paranormal, but I do love the stories.  Nevertheless, I have had a few “odd” experiences in my life.
 
 This is one of them.
