--- a/_posts/2020-05-02-obstruction-8096.markdown
+++ b/_posts/2020-05-02-obstruction-8096.markdown
@@ -4,6 +4,7 @@ title:  "Obstruction 8096; or, The Long Branch Locomotive Graveyard"
 date:   2020-05-02 -0700
 categories:
 ---
+![](/mysteries/images/Obstruction8096.jpg)
 
 *Obstruction 8096* was so named when it came to the attention of the *National Oceanic and Atmospheric Administration* (NOAA) in 1989.
 
